Split off BuildSwap translations, finished Dutch and Pirate Speak

--- a/en_7s.properties
+++ b/en_7s.properties
@@ -29,6 +29,13 @@ feedback.word.win=Win
 feedback.word.tie=Tie
 feedback.word.voted=Marked with the black spot
 feedback.word.voted.exclamation=Marked with the black spot!
+feedback.word.ago=ago
+feedback.word.rewardSummary=Booty Showcase
+feedback.word.gameEnded=The treasure be burried!
+feedback.word.youHaveEarned=You've found
+feedback.word.winner=Winner
+feedback.word.winners=Winners
+feedback.word.players=Captains
 
 error.invalid.slot.item=§cError: Invalid %s item!
 
@@ -58,7 +65,3 @@ game.prefix.buildswap=§9[TreasureSwap]
 game.prefix.creative=§9[Crea'ive]
 game.alreadyStarted.spectator=§f This treasure be plundered already, so yer put in the crow's nest.
 game.compass.usage=§fSmash with the compass to send yer parrot to yer mates.
-
-buildswap.opponentLeft=§fYer opponent left with the grog! We're looking for another mate in a tavern. Sit tight!
-buildswap.feedback.cannotVote.spectator=Parrots ain't got no vote!
-buildswap.feedback.cannotVote.side=Ye can't vote for this side!
