Added you're playing on and fixed a Dutch thing

--- a/en_7s.properties
+++ b/en_7s.properties
@@ -65,3 +65,5 @@ game.prefix.buildswap=§9[TreasureSwap]
 game.prefix.creative=§9[Crea'ive]
 game.alreadyStarted.spectator=§f This treasure be plundered already, so yer put in the crow's nest.
 game.compass.usage=§fSmash with the compass to send yer parrot to yer mates.
+
+game.scoreboard.playingOn=Ye're digging on
