Moved Voted! to BuildSwap and added white whitespace

--- a/BuildSwap/en_7s.properties
+++ b/BuildSwap/en_7s.properties
@@ -5,6 +5,7 @@ language.code=en_7s
 buildswap.opponentLeft=§fYer opponent left with the grog! We're looking for another mate in a tavern. Sit tight!
 buildswap.feedback.cannotVote.spectator=Parrots ain't got no vote!
 buildswap.feedback.cannotVote.side=Ye can't vote for this side!
+buildswap.feedback.voted=§f Marked with the black spot!
 buildswap.feedback.foundPartnerNoTransfer=§f We found ye 'nother mate! Sadly we couldn't warp yer ship, so ye're given the ship of another captain. By the Powers!
 buildswap.feedback.foundPartner=§f We found ye 'nother mate!
 buildswap.feedback.opponentsLeft=§f Them landlubber(s) left, so ye're put into the crow's nest.
