Added tab list header and footer translations

--- a/BuildSwap/en_7s.properties
+++ b/BuildSwap/en_7s.properties
@@ -31,6 +31,9 @@ buildswap.scoreboard.timeRemaining=Time remaining
 buildswap.scoreboard.swap=Swap to yonder side!
 buildswap.scoreboard.hurry=Hurry!
 
+buildswap.tab.header=§bWelcome to Grian Network TreasureSwap!
+buildswap.tab.footer=§bWonderful, glorious booty be burried on:
+
 theme.angel=An angel
 theme.axe=An axe
 theme.baby=A baby
